--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,58 @@
     <groupId>com.hy</groupId>
     <artifactId>hy</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
+    <!-- 参数配置 -->
+    <properties>
+        <!-- 项目参数 -->
+        <!--<root.basedir>${project.basedir}</root.basedir>-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <java.version>1.8</java.version>
+
+        <spring.version>5.0.0.RELEASE</spring.version>
+        <junit.version>4.12</junit.version>
+        <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+
+    </properties>
+
+
+    <repositories>
+        <!--阿里库-->
+        <repository>
+            <id>alimaven</id>
+            <name>aliyun maven</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>central</id>
+            <name>Maven Repository Switchboard</name>
+            <url>http://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <modules>
+
+        <module>hy-common</module>
+    </modules>
 
 </project>
